--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "description": "convert as3 code base to typescript",
   "main": "index.js",
+  "bin": {
+    "as3ToTypescript": "./bin/as3ToTypescript"
+  },
   "scripts": {
     "test": "node test/runner generate && node test/runner compare",
     "generate": "node test/runner generate",
     "accept": "node test/runner accept",
-    "compile": "tsc --module 'commonjs' --outDir lib --target es5 src/main/parser.ts src/main/emitter.ts",
-    "watch": "tsc --module 'commonjs' --outDir lib --target es5 --watch src/main/parser.ts src/main/emitter.ts"
+    "compile": "tsc --module 'commonjs' --outDir lib --target es5 src/declarations/node.d.ts src/main/parser.ts src/main/emitter.ts src/main/command.ts",
+    "watch": "tsc --module 'commonjs' --outDir lib --target es5 --watch src/declarations/node.d.ts src/main/parser.ts src/main/emitter.ts src/main/command.ts"
   },
   "keywords": [
     "actionscript",
@@ -19,9 +22,11 @@
   "author": "François de Campredon",
   "license": "Apache Licence V2",
   "dependencies": {
+    "fs-extended": "^0.2.0",
+    "rimraf": "^2.2.8",
     "sax": "~0.6.0"
   },
   "devDependencies": {
-    "typescript": "~1.0.0"
+    "typescript": "~1.3.0"
   }
 }
